<resources>
    <string name="app_name">Budget Planner</string>


    <!-- Strings related to Main Activity view -->
    <string name="tab_goals">Goals</string>
    <string name="tab_charts">Charts</string>
    <string name="tab_overview">Overview</string>


    <!-- Strings related to login -->
    <string name="title_activity_login">Budget Planner</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Welcome!</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_main_login">Budget Planner</string>
    <string name="title_activity_overview">Overview</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="title_activity_camera">Camera</string>
    <string name="title_activity_settings">Settings</string>
    <string name="title_activity_tester">Sign in</string>
    <string name="title_activity_register">Register</string>
    <string name="title_activity_signup">Signup</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />
    <string name="pref_title_system_sync_settings">System sync settings</string>


    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>
    <string name="pref_title_new_message_notifications">New message notifications</string>
    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>
    <string name="pref_title_vibrate">Vibrate</string>

    <!-- Strings related to New Goal Activity -->
    <string name="frag_goals_header">Current Goals</string>
    <string name="frag_date_header">Date</string>
    <string name="frag_category_header">Category</string>
    <string name="frag_amount_needed_header">Amount Needed</string>
    <string name="add_a_new_goal">Add a New Goal</string>
    <string name="submit_btn">Submit</string>
    <string name="amount_required">Amount Required</string>
    <string name="date">Date</string>
    <string name="mm_dd_yyyy">MM / DD / YYYY</string>
    <string name="other">Other</string>
    <string name="category">Category</string>
    <string name="money_sign">$</string>
    <string name="add_a_transaction">Add a Transaction</string>
    <string name="camera">camera</string>
    <string name="more_options">More Options</string>
    <string name="confirm_transaction">Confirm Transaction</string>
    <string name="date_colon">Date:</string>
    <string name="item_colon">Item:</string>
    <string name="amount_colon">Amount:</string>
    <string name="confirm">Confirm</string>
    <string name="back">Back</string>
    <string name="all_transactions">All Transactions</string>

    <string-array name="category_names">
        <item>Select a Category</item>
        <item>Gift</item>
        <item>New Car</item>
        <item>Rent</item>
        <item>Vacation</item>
        <item>Home</item>
        <item>School Fees</item>
        <item>Loan</item>
    </string-array>

    <string name="ok">OK</string>
    <string name="permission_camera_rationale">Access to the camera is needed for detection</string>
    <string name="no_camera_permission">This application cannot run because it does not have the camera permission.  The application will now exit.</string>
    <string name="low_storage_error">Ocr dependencies cannot be downloaded due to low device storage</string>
    <string name="title_activity_main">Ocr Detector Sample</string>
    <string name="ocr_header">Click detect text button to start (Select Total)</string>
    <string name="read_text">Detect Text</string>
    <string name="auto_focus">Auto Focus</string>
    <string name="use_flash">Use Flash</string>
    <string name="ocr_success">Text read successfully</string>
    <string name="ocr_failure">No text captured</string>
    <string name="ocr_error">"Error reading text: %1$s"</string>
    <string name="confirm_camera">Confirm</string>
    <string name="save_changes">Save Changes</string>
    <string name="tap_entry_above_to_edit">Tap Entry Above To Edit</string>
    <string name="all_trans_text">All Transactions</string>
    <string name="amountHeaderAll">Amount</string>
</resources>
