<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/confirmCategory"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="80dp"
        android:textSize="20sp"
        android:text="@string/category" />

    <TextView
        android:id="@+id/confirmDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/confirmCategory"
        android:layout_alignStart="@+id/confirmCategory"
        android:layout_below="@+id/confirmCategory"
        android:layout_marginTop="53dp"
        android:textSize="20sp"
        android:text="@string/date" />

    <TextView
        android:id="@+id/confirmAmount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/confirmDate"
        android:layout_alignStart="@+id/confirmDate"
        android:layout_below="@+id/confirmDate"
        android:layout_marginTop="54dp"
        android:textSize="20sp"
        android:text="@string/amount" />

    <Button
        android:id="@+id/confirmBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="67dp"
        android:layout_toEndOf="@+id/confirmCategory"
        android:layout_toRightOf="@+id/confirmCategory"
        android:background="@color/colorAccent"
        android:onClick="confirmTransaction"
        android:text="@string/confirm" />

    <Button
        android:id="@+id/backBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/confirmBtn"
        android:layout_alignBottom="@+id/confirmBtn"
        android:layout_toLeftOf="@+id/confirmAmount"
        android:layout_toStartOf="@+id/confirmAmount"
        android:background="@color/colorAccent"
        android:onClick="goToManual"
        android:text="@string/back" />
</RelativeLayout>