<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@mipmap/add_goal"
    tools:layout_editor_absoluteY="81dp">

    <android.support.constraint.ConstraintLayout
        android:layout_width="265dp"
        android:layout_height="365dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:background="@color/transparent_box"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.506"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <Spinner
            android:id="@+id/categorySpinner"
            android:layout_width="240dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            app:layout_constraintBottom_toTopOf="@+id/submitAddGoalBtn"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.444"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.031" />

        <CheckBox
            android:id="@+id/otherChkBx"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:layout_marginBottom="196dp"
            android:layout_marginEnd="8dp"
            android:layout_marginTop="8dp"
            android:text="@string/other"
            android:textColor="@color/hint_text_dark"
            app:layout_constraintBottom_toTopOf="@+id/submitAddGoalBtn"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.047"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="1.0"
            android:layout_marginRight="8dp" />

        <EditText
            android:id="@+id/newCategoryET"
            android:layout_width="155dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="188dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="92dp"
            android:layout_marginTop="8dp"
            android:ems="10"
            android:hint="@string/category"
            android:inputType="text"
            android:visibility="invisible"
            app:layout_constraintBottom_toTopOf="@+id/submitAddGoalBtn"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.846"
            android:layout_marginLeft="92dp"
            android:layout_marginRight="8dp" />

        <TextView
            android:id="@+id/date_label_add_new_goal"
            android:layout_width="50dp"
            android:layout_height="40dp"
            android:layout_marginBottom="116dp"
            android:layout_marginEnd="8dp"
            android:layout_marginTop="8dp"
            android:gravity="center_vertical"
            android:text="@string/date"
            android:textSize="15sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/submitAddGoalBtn"
            app:layout_constraintEnd_toStartOf="@+id/dateET"
            app:layout_constraintHorizontal_bias="0.166"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="1.0"
            android:layout_marginRight="8dp" />

        <EditText
            android:id="@+id/dateET"
            android:layout_width="143dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="112dp"
            android:layout_marginEnd="8dp"
            android:clickable="true"
            android:ems="10"
            android:focusable="false"
            android:hint="@string/mm_dd_yyyy"
            android:longClickable="false"
            android:inputType="date"
            app:layout_constraintBottom_toTopOf="@+id/submitAddGoalBtn"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginRight="8dp" />

        <TextView
            android:id="@+id/amtRequiredHead"
            android:layout_width="121dp"
            android:layout_height="36dp"
            android:layout_marginBottom="40dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:gravity="center_vertical"
            android:text="@string/amount_required"
            android:textSize="15sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/submitAddGoalBtn"
            app:layout_constraintEnd_toStartOf="@+id/amtRequiredET"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/date_label_add_new_goal"
            app:layout_constraintVertical_bias="0.875" />

        <EditText
            android:id="@+id/amtRequiredET"
            android:layout_width="108dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="44dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:ems="10"
            android:hint="@string/money_sign"
            android:inputType="number"
            android:singleLine="false"
            app:layout_constraintBottom_toTopOf="@+id/submitAddGoalBtn"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.943"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/dateET"
            app:layout_constraintVertical_bias="1.0"
            android:layout_marginLeft="8dp" />

        <Button
            android:id="@+id/submitAddGoalBtn"
            android:layout_width="105dp"
            android:layout_height="55dp"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:backgroundTint="@color/colorPrimary"
            android:onClick="submitNewGoal"
            android:text="@string/submit_btn"
            android:textColor="@color/colorAccent"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.972" />
    </android.support.constraint.ConstraintLayout>

</android.support.constraint.ConstraintLayout>